[gd_scene load_steps=4 format=2]

[ext_resource path="res://Car.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Audi_Sport_Quattro.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.636, 28.7133 )

[node name="Car_Main" type="Area2D"]
input_pickable = false
collision_mask = 3
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 4, 4 )
[connection signal="area_entered" from="." to="." method="_on_Car_Main_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
